Add a lasagna recipee
Created a lasagna recipe page, with a picture, description, ingredients
and Steps list

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,27 @@
 </head>
 <body>
     <h1>Lasagna Recipe:</h1>
+
+    <img src="../images/Lasagna-Recipe-f.webp">
+
+    <h3>Description:</h3>
+    <p>This is a lasagna Recipe.</p>
+    <p>It takes a little work, but it is worth it.</p>
+
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>1 pound sweet Italian sausage</li>
+        <li>lean ground beef</li>
+        <li>½ cup minced onion</li>
+        <li>more...</li>
+    </ul>
+
+    <h3>Steps:</h3>
+    <ul>
+        <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
+        <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li>
+        <li>...</li>
+    </ul>
+
 </body>
 </html>
